# alpakka_firmware

./: CMakeLists.txt  readme.md
.devcontainer/: Dockerfile  devcontainer.json
scripts/: version.cmake
src/: CMakeLists.txt  main.c
src/headers/: bus.h
